@@ -52,10 +52,10 @@ void FlintVersion::create()
 {
     char buf[VERSIONFILE_SIZE] = MAGIC_STRING;
     unsigned char *v = reinterpret_cast<unsigned char *>(buf) + MAGIC_LEN;
-    v[0] = char(FLINT_VERSION);
-    v[1] = char(FLINT_VERSION >> 8);
-    v[2] = char(FLINT_VERSION >> 16);
-    v[3] = char(FLINT_VERSION >> 24);
+    v[0] = static_cast<unsigned char>(FLINT_VERSION & 0xff);
+    v[1] = static_cast<unsigned char>(FLINT_VERSION >> 8);
+    v[2] = static_cast<unsigned char>(FLINT_VERSION >> 16);
+    v[3] = static_cast<unsigned char>(FLINT_VERSION >> 24);
 
     int fd = ::open(filename.c_str(), O_WRONLY|O_CREAT|O_TRUNC|O_BINARY, 0666);
 
