@@ -1,3 +1,7 @@
+Thu Sep 14 02:01:58 BST 2006  Olly Betts <olly@survex.com>
+
+	* backends/flint/flint_version.cc: Fix warning from GCC 4.1.0.
+
 Wed Sep 13 18:12:43 BST 2006  Olly Betts <olly@survex.com>
 
 	* backends/flint/flint_io.cc,backends/flint/flint_io.h,
